@@ -16,7 +16,6 @@
 
 package org.springframework.boot.actuate.web.mappings.reactive;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -52,28 +51,28 @@ public class RequestMappingConditionsDescription {
 			.getExpressions()
 			.stream()
 			.map(MediaTypeExpressionDescription::new)
-			.toList();
+			.collect(Collectors.toList());
 		this.headers = requestMapping.getHeadersCondition()
 			.getExpressions()
 			.stream()
 			.map(NameValueExpressionDescription::new)
-			.toList();
+			.collect(Collectors.toList());
 		this.methods = requestMapping.getMethodsCondition().getMethods();
 		this.params = requestMapping.getParamsCondition()
 			.getExpressions()
 			.stream()
 			.map(NameValueExpressionDescription::new)
-			.toList();
+			.collect(Collectors.toList());
 		this.patterns = requestMapping.getPatternsCondition()
 			.getPatterns()
 			.stream()
 			.map(PathPattern::getPatternString)
-			.collect(Collectors.collectingAndThen(Collectors.toSet(), Collections::unmodifiableSet));
+			.collect(Collectors.toSet());
 		this.produces = requestMapping.getProducesCondition()
 			.getExpressions()
 			.stream()
 			.map(MediaTypeExpressionDescription::new)
-			.toList();
+			.collect(Collectors.toList());
 	}
 
 	public List<MediaTypeExpressionDescription> getConsumes() {
